# Tnix

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  device.dts  doc.md  gdbinit.py  test  test.c  test.py
kernel/: config.h  errno.h  kernel.ld  list.c  list.h  plic.c  plic.h  printf.c  printf.h  pt_reg.S  riscv.h  sleeplock.c  sleeplock.h  spinlock.c  spinlock.h  string.c  string.h  trap.c  type.h  types.h
kernel/boot/: entry.S  main.c  start.c
kernel/dev/: console.c  dev.h  disk.c  driver.h  irqf.h  uart.c
kernel/fs/: bio.c  bio.h  dir.c  dir.h  elf.c  elf.h  file.c  file.h  fs.c  fs.h  inode.c  inode.h  pipe.c  pipe.h
kernel/mem/: alloc.c  alloc.h  slot.c  slot.h  vm.c  vm.h
kernel/syscall/: syscall.c  syscall.h  sysfs.c  sysmem.c  systask.c  usys.S  usys.h
kernel/task/: cpu.c  cpu.h  elf.c  elf.h  init.c  sche.c  sche.h  switch.S  systemd.c  task.c  task.h
kernel/trap/: plic.c  plic.h  pt_reg.h  trap.c
kernel/util/: list.c  list.h  printf.c  printf.h  riscv.h  sleeplock.c  sleeplock.h  spinlock.c  spinlock.h  string.c  string.h  types.h
mkfs/: mkfs.cc
user/: user.ld
user/include/: str.h  usys.h
user/src/: cat.c  echo.c  file  init.c  mkdir.c  pipe.c  rm.c  rmdir.c  sh.c  shutdown.c  str.h  touch.c  usys.S  usys.h  vi.c
